# sce_image_extractor

./: .gitignore  README.md  pyproject.toml  requirements.txt  sce_image_extractor.py
